--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,5 +5,6 @@
     <span class="nav-icon"><b></b></span>
     <div class="content">{{ content }}</div>
     {% include footer.html %}
+    <script src="/static/constellations.js"></script>
   </body>
 </html>
