--- a/_layouts/talk.html
+++ b/_layouts/talk.html
@@ -11,7 +11,8 @@ layout: base
   <header>
     <!-- div class="bg" style="background-image: url({{ page.cover }})"></div -->
     <br/>
-    <div>
+    <canvas data-color="rgba(0,0,0,0.1)"></canvas>
+    <div style="z-index: 9">
       <h1 itemprop="name headline">{{ page.title }}</h1>
       <div class="lead">
         <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
