--- a/_sass/fullscreen-menu.scss
+++ b/_sass/fullscreen-menu.scss
@@ -28,7 +28,7 @@
       transform: translateY(50%);
       a {
         display: inline-block;
-        line-height: 120px;
+        line-height: 100px;
         color: #fff;
         b {
           font-size: 1em;
@@ -37,14 +37,13 @@
       }
       &:hover a {
         color: $text-color;
-        transform: scale3d(.9,.9,.9);
+        transform: scale(.9);
       }
     }
   }
   .connect-icons {
     opacity: 0;
     transform: translateY(-200px);
-    line-height: 120px;
     &:hover a { transform: initial; }
   }
 }
@@ -59,7 +58,8 @@ body.nav-opened {
       &:nth-child(1) { transition-delay: .4s }
       &:nth-child(2) { transition-delay: .5s }
       &:nth-child(3) { transition-delay: .6s }
-      &:nth-child(4) { transition-delay: .4s }
+      &:nth-child(4) { transition-delay: .8s }
+      &:nth-child(5) { transition-delay: .4s }
     }
   }
 }
@@ -76,6 +76,6 @@ body.nav-opened {
 @media (max-height: 400px) {
   #fullscreen-menu nav ul li a {
     font-size: 50px;
-    line-height: 100px;
+    line-height: 50px;
   }
 }
