--- a/css/main.scss
+++ b/css/main.scss
@@ -89,7 +89,7 @@ b {
   position: relative;
   min-height: 500px;
   padding: 200px 100px;
-  background: $brand-color;
+  background: $aqua;
   font-size: 50px;
   font-weight: 700;
   text-align: left;
@@ -97,23 +97,6 @@ b {
   overflow: hidden;
   &>div { position: relative }
 
-  &::before {
-    opacity: 0.7;
-    content: '';
-    display: block;
-    position: absolute;
-    top: 50px;
-    right: 50px;
-    width: 100%;
-    height: 100%;
-    background-size: auto 150%;
-    background-repeat: no-repeat;
-    background-position: right top;
-    background-image: url(../static/portrait4.png);
-    -webkit-filter: contrast(0.7);
-       -moz-filter: contrast(0.7);
-            filter: contrast(0.7);
-  }
   a {
     color: #fff;
     background: $text-color;
@@ -130,9 +113,6 @@ b {
   #about {
     font-size: 30px;
     padding: 40px;
-    &::before {
-      opacity: 0.7;
-    }
   }
 }
 
@@ -211,11 +191,12 @@ b {
     }
   }
   li.title-card {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 400px;
-    color: $brand-color;
+    color: $text-color;
     background-color: #fff;
     font-size: 80px;
     font-weight: 900;
@@ -247,4 +228,15 @@ a.logo {
 }
 @media (max-width: 600px) {
   a.logo { left: 40px; }
+}
+
+canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+body.nav-opened canvas {
+  visibility: hidden;
 }
