Got something on your mind?

--- a/_layouts/talk.html
+++ b/_layouts/talk.html
@@ -33,3 +33,9 @@ layout: base
   <section itemprop="articleBody">{{ content }}</section>
 
 </article>
+
+<div class="article-footer">
+  Got something on your mind?<br/>
+  <a href="/contact">Let's talk<b>.</b></a>
+</div>
+
