Add links to conference where talks were given

--- a/_sass/article.scss
+++ b/_sass/article.scss
@@ -13,6 +13,7 @@ article.article {
       height: 390px;
     }
   }
+  p a { border-bottom: 3px solid rgba(0,0,0,0.1); }
 }
 
 article.article header {
