--- a/_sass/simple.scss
+++ b/_sass/simple.scss
@@ -15,9 +15,19 @@ body#simple {
     margin: 0 auto 50px;
     &:last-of-type { margin-bottom: 0; }
   }
+  .content a {
+    color: #fff;
+    background: $text-color;
+    padding: .1em .2em .2em;
+    transition: color .2s $easing, background .6s $easing;
+    &:hover {
+      color: $text-color;
+      background: #fff;
+    }
+  }
   h3 {
     max-width: 700px;
-    margin: 0 auto;
+    margin: 0 auto 10px;
     opacity: 1;
     a {
       color: #fff;
