Add new things :-)

--- a/_layouts/talk.html
+++ b/_layouts/talk.html
@@ -24,7 +24,7 @@ layout: base
           </span>
         {% endif %}
         {% if page.summary %}
-          &middot; <span>{{ page.summary }}</span>
+        <b> &middot; </b><span>{{ page.summary }}</span>
         {% endif %}
       </div>
     </div>
