--- a/_sass/simple.scss
+++ b/_sass/simple.scss
@@ -6,7 +6,6 @@ body#simple {
   font-size: 40px;
   h1 {
     margin: 0;
-    padding-top: 30px;
     padding-bottom: 50px;
     text-align: center;
   }
@@ -41,25 +40,6 @@ body#simple {
     }
   }
   &>.connect-icons { padding-top: 50px; }
-  &::before {
-    z-index: -1;
-    opacity: 0.9;
-    content: '';
-    display: block;
-    position: fixed;
-    top: 50px;
-    right: 50px;
-    width: 100%;
-    height: 100%;
-    background-size: auto 150%;
-    background-repeat: no-repeat;
-    background-position: right top;
-    background-image: url(../static/portrait5.png);
-    transition: background-size .2s ease;
-    -webkit-filter: contrast(0.7);
-       -moz-filter: contrast(0.7);
-            filter: contrast(0.7);
-  }
 }
 @media (max-width: 600px) {
   body#simple {
@@ -70,12 +50,12 @@ body#simple {
 @media (max-width: 900px) {
   body#simple {
     padding: 100px 0 0;
-  }
-  body#simple p,
-  body#simple h3 {
-    padding-left: 40px;
-    padding-right: 40px;
-    font-size: 30px;
+    h1 { padding-top: 30px; }
+    p, h3 {
+      padding-left: 40px;
+      padding-right: 40px;
+      font-size: 30px;
+    }
   }
   ul.posts li {
     width: 100vw;
