Fix typo (finally)

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
           <h2>Bend the Fish While it is Still Wet</h2>
         </a>
         <h3>
-          How East Aftrica Leap-frogged the world in mobile
+          How East Africa Leap-frogged the world in mobile
           fin-tech &middot; <a href="#">10 MIN READ</a>
         </h3>
       </div>
